crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@64.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO rngfunc VALUES(2,1,'Mary');"
---
InsertStmt@0..39
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..19
    Ident@12..19 "rngfunc"
  Whitespace@19..20 " "
  SelectStmt@20..37
    Values@20..26 "VALUES"
    Ascii40@26..27 "("
    List@27..37
      AConst@27..28
        Iconst@27..28 "2"
      Ascii44@28..29 ","
      AConst@29..30
        Iconst@29..30 "1"
      Ascii44@30..31 ","
      AConst@31..37
        Sconst@31..37 "'Mary'"
  Ascii41@37..38 ")"
  Ascii59@38..39 ";"

