crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@75.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM getrngfunc2(1) AS t1;
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeFunction@14..34
    List@14..27
      FuncCall@14..27
        Ident@14..25 "getrngfunc2"
        Ascii40@25..26 "("
        AConst@26..27
          Iconst@26..27 "1"
    Ascii41@27..28 ")"
    Whitespace@28..29 " "
    Alias@29..34
      As@29..31 "AS"
      Whitespace@31..32 " "
      Ident@32..34 "t1"
  Ascii59@34..35 ";"

