crates/pg_syntax/tests/snapshots/postgres_regress/rangefuncs@86.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE VIEW vw_getrngfunc AS SELECT * FROM getrngfunc3(1);
---
ViewStmt@0..58
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  View@7..11 "VIEW"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "vw_getrngfunc"
  Whitespace@25..26 " "
  As@26..28 "AS"
  Whitespace@28..29 " "
  SelectStmt@29..56
    Select@29..35 "SELECT"
    Whitespace@35..36 " "
    ResTarget@36..37
      ColumnRef@36..37
        AStar@36..37
          Ascii42@36..37 "*"
    Whitespace@37..38 " "
    From@38..42 "FROM"
    Whitespace@42..43 " "
    RangeFunction@43..56
      List@43..56
        FuncCall@43..56
          Ident@43..54 "getrngfunc3"
          Ascii40@54..55 "("
          AConst@55..56
            Iconst@55..56 "1"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

